Update color palette and assets

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,12 @@
 // colors
+$white: #ffffff;
+$black: #202124;
+$caribbean-green: #00dba2;
+$bittersweet: #ff676a;
+$picton-blue: #54a6ec;
+$dodger-blue: #2480f0;
+
+// DO NOT USE - deprecate after redesign
 $light-blue: rgb(203, 230, 253);
 $dark-blue: rgb(87, 166, 237);
 $teal: rgb(85, 133, 135);
-$white: rgb(255, 255, 255);
-$black: rgb(27, 27, 31);
