--- a/src/components/sponsors/sponsors.scss
+++ b/src/components/sponsors/sponsors.scss
@@ -1,7 +1,8 @@
 @import '../../styles/variables';
 
 .sponsors {
-  background-color: $light-blue;
+  background-color: $black;
+  color: $white;
   padding: 50px 0;
 
   &__title {
