--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,6 +6,11 @@ $bittersweet: #ff676a;
 $picton-blue: #54a6ec;
 $dodger-blue: #2480f0;
 
+// viewports
+$viewport-md: 768px;
+$viewport-lg: 1024px;
+$viewport-xxl: 1440px;
+
 // DO NOT USE - deprecate after redesign
 $light-blue: rgb(203, 230, 253);
 $dark-blue: rgb(87, 166, 237);
