--- a/src/sections/about/about.scss
+++ b/src/sections/about/about.scss
@@ -7,27 +7,30 @@
   padding-top: 100px;
   position: relative;
 
-  &__text-container {
-    padding: 20px;
+  &__text {
+    padding-bottom: 20px;
   }
 
-  &::after {
-    content: '';
-    background-color: $light-blue;
-    bottom: 0;
-    height: 75px;
-    position: absolute;
-    width: 100%;
-    z-index: -1;
+  &__link {
+    font-weight: 500;
+    text-decoration: underline;
+  }
+
+  &__evento {
+    color: #00daa1;
+  }
+
+  &__slogan {
+    font-weight: 600;
+    color: #ff676a;
   }
 
   @media screen and (min-width: $viewport-md) {
     display: grid;
-    grid-template-columns: 1fr 2fr;
     padding-top: 0;
 
     &__text-container {
-      padding: 30px 100px;
+      padding: 70px 100px;
     }
   }
 }
