--- a/src/sections/speakers/speakers.scss
+++ b/src/sections/speakers/speakers.scss
@@ -1,52 +1,8 @@
 @import '../../styles/variables';
 
-// .speakers {
-//   display: flex;
-//   flex-direction: column-reverse;
-//   align-items: center;
-//   justify-items: center;
-//   grid-template-columns: 1fr 1fr;
-//   padding: 100px 50px;
-//   position: relative;
-//   text-align: center;
-
-//   @media screen and (min-width: 768px) {
-//     display: grid;
-//   }
-
-//   &__container {
-//     padding-top: 100px;
-
-//     @media screen and (min-width: 768px) {
-//       padding-top: 0;
-//     }
-
-//     &::before {
-//       content: '';
-//       background-color: $light-blue;
-//       height: 50px;
-//       position: absolute;
-//       top: 0;
-//       left: 0;
-//       width: 100%;
-//     }
-//   }
-
-//   &__decor {
-//     background: url('../../assets/img/speakers-decor.svg');
-//     background-size: contain;
-//     background-repeat: no-repeat;
-//     position: absolute;
-//     top: -50px;
-//     height: 200px;
-//     right: 15%;
-//     width: 200px;
-//     z-index: 2;
-//   }
-// }
-
 .speakers {
-  margin-block: 40px;
+  margin-block-start: 40px;
+  margin-block-end: 60px;
 
   &__title {
     font-size: 36px;
@@ -54,6 +10,7 @@
     font-weight: 700;
     text-align: left;
     padding-inline-start: 20px;
+    margin-bottom: 0;
 
     @media screen and (min-width: 768px) {
       font-size: 64px;
@@ -62,12 +19,12 @@
     }
 
     &-container {
-      width: 90%;
+      width: 88%;
       color: $white;
       background-color: #ff676a;
       border-radius: 0 16px 16px 0;
       box-shadow: 0px 4px 12px 2px #00000040;
-      padding-block: 20px;
+      padding-block: 30px;
     }
   }
 
@@ -77,6 +34,7 @@
     font-weight: 700;
     text-align: left;
     color: #000;
+    margin-block: 30px;
 
     @media screen and (min-width: 768px) {
       font-size: 64px;
@@ -89,26 +47,19 @@
   }
 
   &__container {
+    max-width: 1440px;
     margin: 13px 18px;
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 1140px) {
       display: flex;
       align-items: center;
-      gap: 40px;
-      margin: 110px 181px;
+      gap: 30px;
+      margin: 110px 176px 110px 181px;
     }
   }
 
   &__cfp-button {
     width: 100%;
-    color: $white;
-    cursor: pointer;
-    border: none;
-    padding: 10px 40px;
-    border-radius: 4px;
-    background: #54a6ec;
-    box-shadow: 4px 4px 0px 0px #202124;
-    height: fit-content;
 
     @media screen and (min-width: 768px) {
       flex-shrink: 0;
