--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -30,15 +30,19 @@ a {
   text-decoration-thickness: 2px;
 }
 
-button {
-  color: $white;
-  cursor: pointer;
-  border: none;
-  padding: 20px 40px;
-  border-radius: 4px;
+.anchor__link {
   background: #54A6EC;
+  border-radius: 4px;
   box-shadow: 4px 4px 0px 0px #202124;
+  color: $white;
   font-size: 16px;
-  line-height: 22.4px;
   font-weight: 400;
+  line-height: 22.4px;
+  padding: 20px 40px;
+  text-decoration: none;
+  text-align: center;
+
+  &:hover {
+    background-color: #2780f0;
+  }
 }
