--- a/src/sections/header/header.scss
+++ b/src/sections/header/header.scss
@@ -1,143 +1,61 @@
 @import '../../styles/variables';
 
-$header-btn-border-radius: 10px;
-
 .header {
-  padding-top: 70px;
+  background-image: url('../../assets/backgrounds/header-bg-sm.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100vh;
+  min-height: 800px;
+  padding: 80px 20px 20px 20px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 
-  &__btn {
-    background-color: $dark-blue;
-    border-radius: $header-btn-border-radius;
-    color: $black;
-    display: inline-block;
+  @media screen and (min-width: $viewport-md) {
+    background-image: url('../../assets/backgrounds/header-bg.png');
+    padding: 60px;
+  }
+
+  &__title,
+  &__subtitle {
+    font-size: 38px;
     font-weight: 700;
-    padding: 10px 15px;
-    text-decoration: none;
-
-    &-container {
-      cursor: pointer;
-      margin-top: 20px;
-      position: relative;
-      width: fit-content;
-
-      &::after {
-        content: '';
-        border-radius: $header-btn-border-radius;
-        border: 1px solid $black;
-        height: 100%;
-        position: absolute;
-        top: 5px;
-        right: -5px;
-        transition: all 0.2s ease-in;
-        width: 100%;
-      }
-
-      &:hover::after {
-        border-width: 2px;
-        transform: translate(-10px, -10px);
-        z-index: -1;
-      }
-    }
-  }
-
-  &__container {
-    align-items: center;
-    display: grid;
-    height: 100vh;
-    margin-top: 75px;
-    min-height: 800px;
-    position: relative;
+    text-wrap: wrap;
+    overflow-wrap: break-word;
 
     @media screen and (min-width: $viewport-md) {
-      grid-template-columns: 1fr 1fr;
-      min-height: 650px;
-    }
-  }
-
-  &__image {
-    padding: 20px;
-    position: relative;
-
-    &::after {
-      content: '';
-      background-color: rgb(203, 230, 253);
-      border-radius: 50px 50px 0 0;
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: -5px;
-      width: 100%;
-      z-index: -1;
+      font-size: 52px;
     }
 
     @media screen and (min-width: $viewport-md) {
-      &::after {
-        border-radius: 50px 0 0 50px;
-      }
-    }
-  }
-
-  &__text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100%;
-    padding: 60px 30px 20px 30px;
-    position: relative;
-
-    @media screen and (min-width: $viewport-md) {
-      padding: 60px;
-    }
-    @media screen and (min-width: 1024px) {
-      padding: 70px;
-    }
-  }
-
-  &__title {
-    font-size: 40px;
-    font-weight: 700;
-
-    @media screen and (min-width: $viewport-md) {
-      font-size: 50px;
-    }
-
-    @media screen and (min-width: 1024px) {
-      font-size: 60px;
+      font-size: 62px;
     }
   }
 
   &__subtitle {
-    font-size: 20px;
-    margin-bottom: 15px;
+    color: $bittersweet;
+  }
 
-    @media screen and (min-width: $viewport-md) {
-      font-size: 30px;
+  &__text-container {
+    @media screen and (min-width: $viewport-lg) {
+      width: 60%;
+    }
+    @media screen and (min-width: $viewport-xl) {
+      width: 50%;
     }
   }
 
-  &__date,
-  &__location {
-    font-size: 16px;
+  &__details {
+    font-size: 20px;
+    margin-bottom: 40px;
   }
 
-  &__wtmlogo {
-    top: 10px;
-    left: 10px;
-    position: absolute;
+  &__logo {
     width: 200px;
 
     @media screen and (min-width: $viewport-md) {
-      bottom: 0;
-      top: unset;
-      left: 0;
-      width: 250px;
-    }
-
-    @media screen and (min-width: 1024px) {
-      bottom: 30px;
-      left: 30px;
-      width: 300px;
+      width: 396px;
     }
   }
 }
