--- a/src/sections/navigation/navigation.scss
+++ b/src/sections/navigation/navigation.scss
@@ -2,18 +2,16 @@
 
 .navigation {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding: 25px 160px;
   position: relative;
-  background-color: $caribbean-green;
-  box-shadow: 0 1px 5px #878787;
+  justify-content: flex-end;
 
-  @media (max-width: $viewport-md) {
-    background-color: transparent;
-    box-shadow: none;
-    justify-content: flex-end;
-    padding: 24px;
+  @media (min-width: $viewport-md) {
+    padding: 25px 160px;
+    background-color: $caribbean-green;
+    box-shadow: 0 1px 5px #878787;
+    box-shadow: 0 1px 5px #878787;
+    justify-content: space-between;
   }
 
   &__logo {
@@ -27,6 +25,10 @@
   &__toggle {
     display: none;
     cursor: pointer;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    z-index: 1;
 
     @media (max-width: $viewport-md) {
       display: block;
@@ -49,6 +51,7 @@
 
       &.is-open {
         display: flex;
+        padding-top: 80px;
       }
     }
   }
