--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,7 +9,7 @@ $dodger-blue: #2480f0;
 // viewports
 $viewport-md: 768px;
 $viewport-lg: 1024px;
-$viewport-xxl: 1440px;
+$viewport-xl: 1440px;
 
 // DO NOT USE - deprecate after redesign
 $light-blue: rgb(203, 230, 253);
