--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -26,6 +26,6 @@ h3 {
 a {
   color: $black;
   text-decoration: underline;
-  text-decoration-color: $teal;
+  text-decoration-color: $black;
   text-decoration-thickness: 2px;
 }
