--- a/src/sections/navigation/navigation.scss
+++ b/src/sections/navigation/navigation.scss
@@ -1,29 +1,63 @@
 @import '../../styles/variables';
-
 .navigation {
-  background-color: $white;
-  box-shadow: 0 1px 5px #878787;
-  width: 100%;
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  position: absolute;
-  top: 0;
-  z-index: 5;
+  align-items: center;
+  padding-inline: 10rem;
+  padding-block: 1.5rem;
+  position: relative;
+  background-color: $teal;
+  box-shadow: 0 1px 5px #878787;
 
-  &__item {
-    margin: 0 10px;
+  @media (max-width: 768px) {
+    padding-inline: 1rem;
+    justify-content: flex-end; 
+    background-color: transparent; 
+    box-shadow: none; 
+  }
+
+  &__logo {
+    width: 150px;
+
+    @media (max-width: 768px) {
+      display: none;
+    }
+  }
+
+  &__toggle {
+    display: none;
+    cursor: pointer;
+
+    @media (max-width: 768px) {
+      display: block;
+      padding: 0;
+    }
   }
 
   &__list {
     display: flex;
-    align-items: center;
-    height: 70px;
-    justify-content: flex-end;
-    padding: 0 80px;
+    gap: 1rem;
+
+    @media (max-width: 768px) {
+      flex-direction: column;
+      position: absolute;
+      top: 100%;
+
+      display: none;
+      background-color: $white;
+      padding: 2rem;
+
+      &.is-open {
+        display: flex;
+      }
+    }
   }
 
-  &__logo {
-    width: 250px;
+  &__item {
+    @media (max-width: 768px) {
+      width: 100%;
+      text-align: center;
+      padding: 1rem 0;
+    }
   }
 }
