--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,143 +1,103 @@
 @import '../../styles/variables';
 
-.header {
-  $color-text: #0000;
-  $color-subTitle: #ff676a;
-  $imagen-fondo: url('../../assets/Hero/Hero.png');
-  .mi-seccion {
-    position: relative; // Permite que los elementos hijos se posicionen relativos a este contenedor
+.header__container {
+  width: 100%;
+  height: 950px;
+  object-fit: cover;
+  padding: 120px 50px;
+  background-position: center;
+  background-size: cover;
+  background-image: url('../../assets/Hero/Hero.png');
+  .header_container-img {
+    .header_section {
+      .header_logo {
+        height: 50px;
+        padding-left: 50px;
+      }
+      h1 {
+        font-weight: 600;
+        padding-left: 50px;
+        color: $black;
+        font-size: 40px;
+      }
 
-    .background-image {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-image: $imagen-fondo;
-      background-size: cover; // Ajusta la imagen para cubrir completamente el contenedor
-      background-position: center; // Centra la imagen
-      opacity: 0.5; // Ajusta la opacidad según tus preferencias
-      z-index: -1; // Coloca la imagen de fondo detrás de los otros elementos
-    }
-  }
+      h2 {
+        color: $bittersweet;
+        padding-left: 50px;
+        font-size: 30px;
+        font-weight: 500;
+      }
 
-  // .container-img {
-  //   padding: 20px;
-  //   border-radius: 8px;
-  //   top: 10px;
-
-  //   .logo {
-  //     width: 20px;
-  //     height: 10px;
-  //   }
-
-  //   h1 {
-  //     color: $color-text;
-  //     font-size: 35px;
-  //     margin-bottom: 10px;
-  //   }
-  //   h2 {
-  //     color: $color-subTitle;
-  //     font-size: 20px;
-  //   }
-
-  //   p {
-  //     color: $color-text;
-  //     font-size: 16px;
-  //   }
-  // }
-
-  &__container {
-    @media screen and (min-width: 768px) {
-      grid-template-columns: 1fr 1fr;
-      min-height: 650px;
-    }
-  }
-
-  &__image {
-    padding: 20px;
-    position: relative;
-
-    &::after {
-      content: '';
-      background-color: rgb(203, 230, 253);
-      border-radius: 50px 50px 0 0;
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: -5px;
-      width: 100%;
-      z-index: -1;
-    }
-
-    @media screen and (min-width: 768px) {
-      &::after {
-        border-radius: 50px 0 0 50px;
+      p {
+        font-size: 20px;
+        padding-left: 50px;
       }
     }
   }
 
-  &__text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100%;
-    padding: 60px 30px 20px 30px;
-    position: relative;
+  // Media query para tablets
+  @media (max-width: 768px) {
+    .header__container {
+      width: 100%;
+      height: 950px;
+      object-fit: cover;
+      padding: 120px 50px;
+      background-position: center;
+      background-size: cover;
+      background-image: url('../../assets/Hero/Hero.png');
+      .header_container-img {
+        .header_section {
+          .header_logo {
+            height: 30px;
+          }
 
-    @media screen and (min-width: 768px) {
-      padding: 60px;
-    }
-    @media screen and (min-width: 1024px) {
-      padding: 70px;
-    }
-  }
+          h1 {
+            font-weight: 600;
+            font-size: 30px !important;
+          }
 
-  &__title {
-    font-size: 40px;
-    font-weight: 700;
+          h2 {
+            font-size: 24px;
+          }
 
-    @media screen and (min-width: 768px) {
-      font-size: 50px;
-    }
-
-    @media screen and (min-width: 1024px) {
-      font-size: 60px;
-    }
-  }
-
-  &__subtitle {
-    font-size: 20px;
-    margin-bottom: 15px;
-
-    @media screen and (min-width: 768px) {
-      font-size: 30px;
+          p {
+            font-size: small;
+          }
+        }
+      }
     }
   }
 
-  &__date,
-  &__location {
-    font-size: 16px;
-  }
+  @media only screen and (max-width: 480px) {
+    .header__container {
+      width: 100%;
+      height: 950px;
+      object-fit: cover;
+      padding: 120px 50px;
+      background-position: center;
+      background-size: cover;
+      background-image: url('../../assets/Hero/Hero.png');
+      .header_container-img {
+        .header_section {
+          .header_logo {
+            width: auto;
+            height: 8px;
+          }
 
-  &__wtmlogo {
-    top: 10px;
-    left: 10px;
-    position: absolute;
-    width: 200px;
+          h1 {
+            font-weight: 600;
+            font-size: 20px !important;
+          }
 
-    @media screen and (min-width: 768px) {
-      bottom: 0;
-      top: unset;
-      left: 0;
-      width: 250px;
-    }
+          h2 {
+            font-size: 20px;
+          }
 
-    @media screen and (min-width: 1024px) {
-      bottom: 30px;
-      left: 30px;
-      width: 300px;
+          p {
+            font-size: small;
+          }
+        }
+      }
     }
   }
 }
