--- a/src/sections/navigation/navigation.scss
+++ b/src/sections/navigation/navigation.scss
@@ -7,64 +7,74 @@
   justify-content: flex-end;
 
   @media (min-width: $viewport-md) {
-    padding: 25px 160px;
     background-color: $caribbean-green;
     box-shadow: 0 1px 5px #878787;
-    box-shadow: 0 1px 5px #878787;
     justify-content: space-between;
+    padding: 25px 80px;
+  }
+
+  @media (min-width: $viewport-lg) {
+    padding: 25px 160px;
   }
 
   &__logo {
     width: 58px;
+    display: none;
 
-    @media (max-width: $viewport-md) {
-      display: none;
+    @media (min-width: $viewport-md) {
+      display: block;
     }
   }
 
   &__toggle {
-    display: none;
     cursor: pointer;
     position: absolute;
-    top: 24px;
-    right: 24px;
+    top: 10px;
+    right: 10px;
     z-index: 1;
+    display: block;
 
-    @media (max-width: $viewport-md) {
-      display: block;
-      padding: 0;
+    @media (min-width: $viewport-md) {
+      display: none;
     }
   }
 
   &__list {
-    display: flex;
-    gap: 1rem;
+    background-color: $caribbean-green;
+    box-shadow: 0 1px 5px #878787;
+    display: none;
+    position: absolute;
+    padding: 80px 20px 20px 20px;
+    top: 0;
 
-    @media (max-width: $viewport-md) {
-      flex-direction: column;
-      position: absolute;
-      top: 100%;
+    @media (min-width: $viewport-md) {
+      background-color: unset;
+      box-shadow: none;
+      display: flex;
+      flex-direction: row;
+      gap: 20px;
+      padding: 0;
+      position: relative;
+    }
 
-      display: none;
-      background-color: $white;
-      padding: 2rem;
+    &.is-open {
+      display: block;
 
-      &.is-open {
+      @media (min-width: $viewport-md) {
         display: flex;
-        padding-top: 80px;
       }
     }
   }
 
   &__item {
+    text-align: center;
+    padding: 15px 0;
     a {
       text-decoration: none;
     }
 
-    @media (max-width: $viewport-md) {
-      width: 100%;
-      text-align: center;
-      padding: 1rem 0;
+    @media (min-width: $viewport-md) {
+      padding: 0;
     }
   }
 }
