--- a/src/sections/navigation/navigation.scss
+++ b/src/sections/navigation/navigation.scss
@@ -10,7 +10,7 @@
     background-color: $caribbean-green;
     box-shadow: 0 1px 5px #878787;
     justify-content: space-between;
-    padding: 25px 80px;
+    padding: 25px 40px;
   }
 
   @media (min-width: $viewport-lg) {
@@ -52,9 +52,12 @@
       box-shadow: none;
       display: flex;
       flex-direction: row;
-      gap: 20px;
+      gap: 10px;
       padding: 0;
       position: relative;
+    }
+    @media (min-width: $viewport-lg) {
+      gap: 20px;
     }
 
     &.is-open {
