--- a/src/sections/sponsors/sponsors.scss
+++ b/src/sections/sponsors/sponsors.scss
@@ -31,3 +31,35 @@
     }
   }
 }
+
+.floating-sponsors {
+  width: 80%;
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: repeat(4, 5rem);
+  align-items: center;
+  margin: 0 auto;
+
+  @media screen and (max-width: 576px) {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(6, 5rem);
+    margin-bottom: 30px;
+  }
+}
+
+.floating-sponsors {
+  img {
+    width: 200px;
+    margin: 5px;
+    height: auto;
+    align-self: center;
+    justify-self: center;
+    &:nth-child(10) {
+      width: 250px;
+    }
+    &:nth-child(11) {
+      width: 120px;
+    }
+  }
+}
