--- a/src/sections/navigation/navigation.scss
+++ b/src/sections/navigation/navigation.scss
@@ -6,14 +6,14 @@
   position: relative;
   justify-content: flex-end;
 
-  @media (min-width: $viewport-md) {
+  @media screen and (min-width: $viewport-md) {
     background-color: $caribbean-green;
     box-shadow: 0 1px 5px #878787;
     justify-content: space-between;
     padding: 25px 40px;
   }
 
-  @media (min-width: $viewport-lg) {
+  @media screen and (min-width: $viewport-lg) {
     padding: 25px 160px;
   }
 
@@ -21,7 +21,7 @@
     width: 58px;
     display: none;
 
-    @media (min-width: $viewport-md) {
+    @media screen and (min-width: $viewport-md) {
       display: block;
     }
   }
@@ -34,7 +34,7 @@
     z-index: 1;
     display: block;
 
-    @media (min-width: $viewport-md) {
+    @media screen and (min-width: $viewport-md) {
       display: none;
     }
   }
@@ -47,7 +47,7 @@
     padding: 80px 20px 20px 20px;
     top: 0;
 
-    @media (min-width: $viewport-md) {
+    @media screen and (min-width: $viewport-md) {
       background-color: unset;
       box-shadow: none;
       display: flex;
@@ -56,14 +56,14 @@
       padding: 0;
       position: relative;
     }
-    @media (min-width: $viewport-lg) {
+    @media screen and (min-width: $viewport-lg) {
       gap: 20px;
     }
 
     &.is-open {
       display: block;
 
-      @media (min-width: $viewport-md) {
+      @media screen and (min-width: $viewport-md) {
         display: flex;
       }
     }
@@ -76,7 +76,7 @@
       text-decoration: none;
     }
 
-    @media (min-width: $viewport-md) {
+    @media screen and (min-width: $viewport-md) {
       padding: 0;
     }
   }
