add registration section

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -2,6 +2,7 @@
   font-family: 'Poppins', sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  font-size: 20px;
 
   color: $black;
   background-color: $white;
@@ -28,4 +29,11 @@ a {
   text-decoration: underline;
   text-decoration-color: $black;
   text-decoration-thickness: 2px;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 1280px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
