--- a/src/sections/navigation/navigation.scss
+++ b/src/sections/navigation/navigation.scss
@@ -5,6 +5,7 @@
   align-items: center;
   position: relative;
   justify-content: flex-end;
+  font-size: 16px;
 
   @media screen and (min-width: $viewport-md) {
     background-color: $caribbean-green;
