--- a/src/sections/sponsors/sponsors.scss
+++ b/src/sections/sponsors/sponsors.scss
@@ -9,6 +9,7 @@
 
   &__content {
     display: flex;
+    align-items: center;
     flex-direction: column;
     margin-top: 30px;
     padding: 0 10px;
