feat: adding agenda tabnle

--- a/src/components/sectionTitle/sectionTitle.scss
+++ b/src/components/sectionTitle/sectionTitle.scss
@@ -83,4 +83,10 @@
       background-color: $bittersweet;
     }
   }
+
+  &--green {
+    .title__background {
+      background-color: $caribbean-green;
+    }
+  }
 }
