--- a/src/sections/agenda/agenda.scss
+++ b/src/sections/agenda/agenda.scss
@@ -1,4 +1,86 @@
 @import '../../styles/variables';
 
 .agenda {
+  &__title-container {
+    padding-left: 5%;
+  }
+  &__container {
+    margin: 0 auto;
+    max-width: 1280px;
+    padding-left: 30px;
+    padding-right: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  &__sub-header {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    color: $green-haze;
+  }
+
+  &__schedule {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    &__row {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      &:not(:last-child) {
+        margin-bottom: 0.3rem;
+      }
+
+      &__cell {
+        height: 3.5rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0.3rem;
+
+        &--green {
+          background: #d1ece3;
+        }
+
+        &--red {
+          background: #ffe7e1;
+        }
+
+        &--blue {
+          background: #cae6ff;
+        }
+
+        &:not(:last-child) {
+          margin-right: 0.3rem;
+        }
+      }
+
+      & > * {
+        border-radius: 5px;
+      }
+      &__hours {
+        display: flex;
+        width: 11rem;
+
+        &-dash {
+          margin: 0 0.5rem;
+        }
+        &-number {
+          width: 5rem;
+          display: flex;
+          justify-content: center;
+        }
+      }
+
+      &__topic-main {
+        width: 39rem;
+      }
+
+      &__topic-secondary {
+        width: 20rem;
+      }
+    }
+  }
 }
