--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,7 @@
 $white: #ffffff;
 $black: #202124;
 $caribbean-green: #00dba2;
+$green-haze: #04a88c;
 $bittersweet: #ff676a;
 $picton-blue: #54a6ec;
 $dodger-blue: #2480f0;
