feat(Agenda): Update agenda style

--- a/src/sections/agenda/agenda.scss
+++ b/src/sections/agenda/agenda.scss
@@ -1,6 +1,12 @@
 @import '../../styles/variables';
 
 .agenda {
+  $grey-100: #f0f0f0;
+  $grey-200: #666666;
+  $gap: 0.375rem;
+  $secondary-talk-column: 264px;
+  $hour-column: 111px;
+
   &__title-container {
     padding-left: 5%;
   }
@@ -30,18 +36,19 @@
     flex-direction: column;
     align-items: start;
     font-size: 14px;
+    margin-bottom: 3rem;
 
     @media screen and (min-width: $viewport-lg) {
       font-size: 20px;
     }
     &__row {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
+      $row: &;
       width: 100%;
 
       @media screen and (min-width: $viewport-lg) {
-        display: flex;
-        justify-content: center;
+        display: grid;
+        grid-template-columns: $hour-column 1fr;
+        gap: $gap;
       }
 
       &:first-child {
@@ -66,89 +73,139 @@
       }
 
       &:not(:last-child) {
-        margin-bottom: 0.3rem;
-
         @media screen and (min-width: $viewport-lg) {
           margin-bottom: 0.1rem;
-          margin-right: 0.3rem;
         }
       }
 
       &__cell {
+        $cell: &;
         display: flex;
-        justify-content: center;
-        align-items: center;
+        justify-content: flex-start;
+        align-items: flex-start;
         padding: 0.3rem;
+        flex-direction: column;
 
         @media screen and (min-width: $viewport-lg) {
           min-height: 3.5rem;
 
           &:not(:last-child) {
-            margin-right: 0.3rem;
+            width: 100%;
+          }
+        }
+
+        &-header {
+          display: none;
+
+          @media screen and (min-width: $viewport-lg) {
+            color: $grey-200;
+            display: grid;
+            font-weight: 700;
+            gap: $gap;
+            grid-template-columns: $hour-column 1fr $secondary-talk-column;
+            justify-content: center;
+            margin-bottom: 0.25rem;
+            width: 100%;
+          }
+
+          #{$cell} {
+            align-items: center;
+            background: $grey-100;
+            justify-content: center;
+            padding: 8px 32px;
+            text-align: center;
+          }
+        }
+
+        &-speaker {
+          color: $grey-200;
+          display: block;
+        }
+
+        &-group {
+          margin-bottom: 0.25rem;
+          @media screen and (min-width: $viewport-lg) {
+            display: grid;
+            gap: $gap;
+            grid-template-columns: 1fr $secondary-talk-column;
+          }
+        }
+
+        &--empty {
+          display: none;
+
+          @media screen and (min-width: $viewport-lg) {
+            display: block;
           }
         }
 
         &--green {
           background: #d1ece3;
+          border-color: #2e7d32;
+
+          #{$row}__hours-number {
+            color: #2e7d32;
+          }
         }
 
         &--red {
           background: #ffe7e1;
+          border-color: #c62828;
+
+          #{$row}__hours-number {
+            color: #c62828;
+          }
         }
 
         &--blue {
           background: #cae6ff;
+          border-color: #2a6fd3;
+
+          #{$row}__hours-number {
+            color: #2a6fd3;
+          }
         }
       }
 
-      & > * {
-        border-radius: 2px;
-
-        @media screen and (min-width: $viewport-lg) {
-          border-radius: 5px;
-        }
-      }
       &__hours {
-        display: flex;
-        flex-direction: row;
-        grid-column: span 2;
-        grid-row: 1;
         margin-bottom: 0.1rem;
+        font-weight: 700;
+        background-color: $grey-100;
+        color: $grey-200;
+        border-radius: 4px;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 0.25rem;
+        padding: 0;
+        min-height: 40px;
 
         @media screen and (min-width: $viewport-lg) {
-          width: 11rem;
           margin-bottom: 0;
+          align-items: center;
+          justify-content: flex-start;
+          background-color: transparent;
+        }
 
-          &-number {
-            width: 5rem;
+        &-number {
+          display: flex;
+          font-weight: 700;
+        }
+      }
+
+      &__topic {
+        &-main {
+          margin-bottom: 0.25rem;
+
+          @media screen and (min-width: $viewport-lg) {
+            margin-bottom: 0;
           }
         }
 
-        &-dash {
-          margin: 0 0.5rem;
-        }
-        &-number {
-          display: flex;
-          justify-content: center;
-        }
-      }
-
-      &__topic-main {
-        grid-column: 1;
-        grid-row: 2;
-        margin-right: 0.1rem;
-
-        @media screen and (min-width: $viewport-lg) {
-          width: calc(65% - 11rem - 12px);
-        }
-      }
-
-      &__topic-secondary {
-        grid-column: 2;
-        grid-row: 2;
-
-        @media screen and (min-width: $viewport-lg) {
-          width: 35%;
+        &-main,
+        &-secondary:not(.agenda__schedule__row__cell--empty) {
+          border-style: solid;
+          border-width: 1px 1px 1px 8px;
+          border-radius: 8px;
         }
       }
     }
